improve Grid examples responsive

--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
                 <!-- First example Grid -->
                 <h4 class="section-subtitle-example">CSS Grid Basics</h4>
                 <div class="example-grid">
-                    <div id="grid-container-one">
+                    <div id="grid-container-one" class="grid-container">
                         <div class="grid-items">
                             <span class="grid-item-number">1</span>
                             justify-self: start;<br />
@@ -832,7 +832,7 @@
                 </div>
 
                 <div class="example-grid">
-                    <div id="grid-container-two">
+                    <div id="grid-container-two" class="grid-container">
                         <div class="grid-container-two">
                             <div class="grid-items">
                                 <span class="grid-item-number">1</span>
@@ -922,7 +922,7 @@
                 <h4 style="--margin-top: 3rem" class="section-subtitle-example">CSS Grid Positioning and Spanning
                 </h4>
                 <div class="example-grid">
-                    <div id="grid-container-three">
+                    <div id="grid-container-three" class="grid-container">
                         <div class="grid-items">
                             <span class="grid-item-number">1</span>
                             order: 0; (by default)
