add a summary section

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <nav aria-label="Main menu">
         <ul>
             <li><a href="#section-home"><span class="nav-dot"></span><span class="nav-label">Home</span></a></li>
+            <li><a href="#section-summary"><span class="nav-dot"></span><span class="nav-label">Summary</span></a></li>
             <li><a href="#section-relative-units"><span class="nav-dot"></span><span class="nav-label">Relative
                         units</span></a></li>
             <li><a href="#section-variables"><span class="nav-dot"></span><span class="nav-label">Variables</span></a>
@@ -68,15 +69,36 @@
                 </button>
             </div>
         </header>
+
+        <!-- SECTION HOME -->
         <section id="section-home">
             <h1>CSS IS AWESOME</h1>
-            <a id="scroll-button" href="#section-relative-units">
+            <a id="scroll-button" href="#section-summary">
                 Scroll <span aria-hidden="true" class="bouncing-hand">👇</span>
             </a>
         </section>
 
+        <!-- SECTION MOTIVES -->
+        <section id="section-summary" class="section section-odd">
+            <h2 class="section-title">A dive into CSS awesome functionalities</h2>
+            <div class="section-description">
+                <p>With this website, I wanted to highlight my favorite things we can do with CSS today.
+                    The list is not finished - there is a lot of amazing things we 
+                    can do with CSS nowadays and in the future - but I think it's a good start. Happy reading !
+                </p>
+            </div>
+            <!-- SUBSECTION RESOURCES -->
+            <h4 class="section-subtitle section-resources">Skip to :</h4>
+            <ul>
+                <li><a href="#section-relative-units">Relative units</a></li>
+                <li><a href="#section-variables">Variables</a></li>
+                <li><a href="#section-navigation">Navigation</a></li>
+                <li><a href="#section-layout">Layout</a></li>
+            </ul>
+        </section>
+
         <!-- SECTION RELATIVE UNITS -->
-        <section class="section section-odd" id="section-relative-units">
+        <section class="section section-even" id="section-relative-units">
             <div class="section-container">
                 <h2 class="section-title">Relative units</h2>
                 <div class="section-description">
@@ -339,7 +361,6 @@
 }
 </pre>
 
-
                 <!-- SUBSECTION RESOURCES -->
                 <h4 class="section-subtitle section-resources">Resources</h4>
                 <ul>
@@ -363,7 +384,7 @@
         </section>
 
         <!-- SECTION VARIABLES -->
-        <section id="section-variables" class="section section-even">
+        <section id="section-variables" class="section section-odd">
             <div class="section-container">
                 <h2 class="section-title">Variables</h2>
                 <div class="section-description">
@@ -581,7 +602,7 @@
             </div>
         </section>
 
-        <section id="section-navigation" class="section section-odd">
+        <section id="section-navigation" class="section section-even">
             <div class="section-container">
                 <h2 class="section-title">Navigation</h2>
                 <div class="section-description">
@@ -721,7 +742,7 @@
         </section>
 
         <!-- SECTION LAYOUT -->
-        <section id="section-layout" class="section section-even">
+        <section id="section-layout" class="section section-odd">
             <div class="section-container">
                 <h2 class="section-title">Layout</h2>
                 <div class="section-description">
