add vendor prefixes

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 </pre>
 
                 <!-- SUBSECTION RESOURCES -->
-                <h4 class="section-subtitle section-resources">Resources</h4>
+                <h4 class="section-subtitle section-resources">Relative units : further resources</h4>
                 <ul>
                     <li><a href="https://dev.to/5t3ph/guide-to-css-units-for-relational-spacing-1mj5">Guide to CSS Units
                             for
@@ -590,7 +590,7 @@
             </pre>
 
                 <!-- SUBSECTION RESOURCES -->
-                <h4 class="section-subtitle section-resources">Further resources</h4>
+                <h4 class="section-subtitle section-resources">Variables : further resources</h4>
                 <ul>
                     <li><a href="https://increment.com/frontend/a-users-guide-to-css-variables/">
                             A user’s guide to CSS variables</a></li>
@@ -731,7 +731,7 @@
                 </pre>
 
                 <!-- SUBSECTION RESOURCES -->
-                <h4 class="section-subtitle section-resources">Scroll-snap : Further resources</h4>
+                <h4 class="section-subtitle section-resources">Scroll-snap : further resources</h4>
                 <ul>
                     <li><a title="Practical CSS Scroll Snapping | CSS-Tricks"
                             href="https://css-tricks.com/practical-css-scroll-snapping/">Practical CSS Scroll Snapping |
@@ -1151,7 +1151,7 @@
             </pre>
 
                 <!-- SUBSECTION RESOURCES -->
-                <h4 class="section-subtitle section-resources">CSS Grid : Further resources</h4>
+                <h4 class="section-subtitle section-resources">CSS Grid : further resources</h4>
                 <ul>
                     <li><a title="Learn CSS Grid - A Guide to Learning CSS Grid | Jonathan Suh"
                             href="https://learncssgrid.com/">Learn CSS Grid - A Guide to Learning CSS Grid | Jonathan
@@ -1247,7 +1247,7 @@
                 </pre>
 
                 <!-- SUBSECTION RESOURCES -->
-                <h4 class="section-subtitle section-resources">Shape-outside : Further resources</h4>
+                <h4 class="section-subtitle section-resources">Shape-outside : further resources</h4>
                 <ul>
                     <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/shape-outside">
                             shape-outside - CSS: Cascading Style Sheets | MDN</a></li>
@@ -1362,7 +1362,7 @@
                 </pre>
 
                 <!-- SUBSECTION RESOURCES -->
-                <h4 class="section-subtitle section-resources">Drop-shadow : Further resources</h4>
+                <h4 class="section-subtitle section-resources">Drop-shadow : further resources</h4>
                 <ul>
                     <li><a href="https://css-irl.info/drop-shadow-the-underrated-css-filter/">
                             CSS { In Real Life } | Drop-Shadow: The Underrated CSS Filter
